--- a/src/main/resources/templates/project/views/resourcesCollection.html
+++ b/src/main/resources/templates/project/views/resourcesCollection.html
@@ -18,9 +18,9 @@
                     </div>
                 </div>
                 <div class="page-title-actions">
-                    <button type="button" data-toggle="tooltip modal" data-target="#addResourceModal" title="" data-placement="bottom"
+                    <button type="button" data-toggle="modal" data-target="#addResourceModal" title="" data-placement="bottom"
                             class="btn-shadow mr-3 btn btn-alternate" data-original-title="Προσθήκη νέου υλικού">
-                        <i class="fa fa-upload"></i>
+                        <i class="fa fa-upload fa-4x"></i>
                     </button>
                 </div>
             </div>
