--- a/src/main/resources/templates/fragments/components/projectExtrUsrCatList.html
+++ b/src/main/resources/templates/fragments/components/projectExtrUsrCatList.html
@@ -25,54 +25,21 @@
                                 <div class="widget-content p-0">
                                     <div class="widget-content-wrapper">
                                         <div class="widget-content-left mr-2">
-                                            <div class="custom-checkbox custom-control"><input type="checkbox" id="exampleCustomCheckbox3" class="custom-control-input"><label class="custom-control-label" for="exampleCustomCheckbox3">&nbsp;</label>
-                                            </div>
-                                        </div>
-                                        <div class="widget-content-left flex2">
-                                            <div class="widget-heading">Development Task</div>
-                                            <div class="widget-subheading">Finish React ToDo List App</div>
-                                        </div>
-                                        <div class="widget-content-right">
-                                            <div class="badge badge-warning mr-2">69</div>
-                                        </div>
-                                        <div class="widget-content-right">
-                                            <button class="border-0 btn-transition btn btn-outline-success">
-                                                <i class="fa fa-check"></i>
-                                            </button>
-                                            <button class="border-0 btn-transition btn btn-outline-danger">
-                                                <i class="fa fa-trash-alt"></i>
-                                            </button>
-                                        </div>
-                                    </div>
-                                </div>
-                            </li>
-
-
-
-
-                            <li class="list-group-item">
-                                <div class="todo-indicator bg-success"></div>
-                                <div class="widget-content p-0">
-                                    <div class="widget-content-wrapper">
-                                        <div class="widget-content-left mr-2">
                                             <div class="widget-content-wrapper">
                                                 <img class="rounded-circle" alt="" width="30"
-                                                     th:src="@{/img/avatars/{img}(img=${member.getProfilePic()})}">
+                                                     th:src="@{/img/avatars/category.png}">
                                             </div>
                                         </div>
                                         <div class="widget-content-left flex2">
-                                            <div th:text="${cat.getName()}" class="widget-heading">
-                                                Name
-                                            </div>
+                                            <div class="widget-heading" th:text="${cat.getName()}">Name</div>
+                                            <div class="widget-subheading" th:text="${cat.getDescription()}">Description</div>
                                         </div>
+
                                         <div class="widget-content-right widget-content-actions">
-                                            <div th:if="${project.getManager().getId()==member.getId()}"
-                                                 class="badge badge-warning mr-2">Manager</div>
-                                            <button class="border-0 btn-transition btn btn-outline-danger"
-                                                    th:if="${project.getManager().getId()!=member.getId()
-                                                    and isManager == true}"
+                                               <button class="border-0 btn-transition btn btn-outline-danger"
+                                                    th:if="${isManager}"
                                                     data-toggle="modal"
-                                                    th:data-target="${'#modal_'+member.getId()}">
+                                                    th:data-target="${'#modal_'+cat.getId()}">
                                                 <i class="fa fa-trash-alt"></i>
                                             </button>
                                         </div>
@@ -83,9 +50,9 @@
                     </div>
                 </div>
             </div>
-            <div th:if="${isManager == true}" class="d-block text-center card-footer">
+            <div class="d-block text-center card-footer">
                 <button class="btn btn-primary" data-toggle="modal" data-target="#addExtrUsrCatModal">
-                    Νέα κατηγορία</button>
+                    Προσθήκη κατηγορίας Extreme User</button>
             </div>
         </div>
     </div>
