--- a/src/main/resources/templates/fragments/components/projectResourcesList.html
+++ b/src/main/resources/templates/fragments/components/projectResourcesList.html
@@ -1,171 +1,94 @@
-<div xmlns:th="http://www.thymeleaf.org">
-
-<div class="text-center mb-3">
-    <h5 class="menu-header-title text-capitalize mb-3 fsize-3">Συγκεντρωμένο υλικό</h5>
-</div>
-
-<div class="row">
-    <div class="col-sm-4 col-lg-3 col-xl-2"> <!-- 12 6 4 -->
-        <div class="mb-3 profile-responsive card">
+<div class="col-md-12 col-lg-6 col-xl-3" xmlns:th="http://www.thymeleaf.org" xmlns="http://www.w3.org/1999/html">
+    <div th:each="resource : ${project.getFileResources()}">
+        <div class="card-shadow-primary card-border mb-3 card">
             <div class="dropdown-menu-header">
-                <div class="dropdown-menu-header-inner bg-focus">
-                    <div class="menu-header-image opacity-2" th:style="'background-image: url('+@{/img/dropdown-header/abstract3.jpg}+');'"></div>
-                    <div class="menu-header-content btn-pane-right">
-                        <div class="avatar-icon-wrapper mr-3 avatar-icon-xl btn-hover-shine">
+                <div class="dropdown-menu-header-inner bg-midnight-bloom">
+                    <div class="menu-header-content">
+                        <div class="avatar-icon-wrapper btn-hover-shine mb-2 avatar-icon-xl">
                             <div class="avatar-icon rounded">
-                                <img src="assets/images/avatars/3.jpg" alt="Τύπος υλικού">
+                                <img src="assets/images/avatars/1.jpg" alt="File Type"
+                                     th:src="@{/img/ftypes/{img}(img=${resource.getTypeString()})}">
                             </div>
                         </div>
                         <div>
-                            <h5 class="menu-header-title">Τίτλος Υλικού</h5>
-                            <h6 class="menu-header-subtitle">Περιγραφή Υλικού</h6>
+                            <h5 class="menu-header-title" th:text="${resource.getTitle()}">Title</h5>
+                        </div>
+                        <div class="menu-header-btn-pane pt-2">
+                            <div role="group" class="btn-group text-center">
+                                <div class="nav">
+                                    <a href="#tab0_" th:href="${'#tab0_'+resource.getId()}" data-toggle="tab"
+                                       class="btn-warning active btn btn-outline-alternate btn-sm">x</a>
+                                    <a href="#tab1_" th:href="${'#tab1_'+resource.getId()}" data-toggle="tab"
+                                       class="btn-warning mr-1 ml-1  btn btn-outline-alternate btn-sm">Σχόλια</a>
+                                    <a href="#tab2_" th:href="${'#tab2_'+resource.getId()}" data-toggle="tab"
+                                       class="btn-warning btn btn-outline-alternate btn-sm">Περιγραφή</a>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
-            <ul class="list-group list-group-flush">
-                <li class="list-group-item">
-                    <div class="widget-content pt-1 pl-0 pr-0">
-                        <div class="text-center">
-                            <h5 class="widget-heading opacity-4 mb-0">Πληροφορίες Υλικού</h5>
-                            <h6 class="mt-3 mb-3">
-                                <span class="pr-2">
-                                    Κατηγορία Extreme User
-                                    <!--                                    <b class="text-danger">12</b> new leads,-->
-                                </span>
-                                <!--                                <span><b class="text-success">$56.24</b> in sales</span>-->
-                            </h6>
-                            <button class="btn-wide btn-pill btn btn-outline-primary">Download</button>
-                        </div>
+            <div class="p-0 card-body">
+                <div class="tab-content">
+                    <div class="tab-pane" id="tab0_" th:id="${'tab0_'+resource.getId()}">
                     </div>
-                </li>
-                <li class="p-0 list-group-item">
-                    <div class="grid-menu grid-menu-2col">
-                        <div class="no-gutters row">
-                            <div class="col-sm-4">
-                                <button class="btn-icon-vertical btn-square btn-transition br-bl btn btn-outline-link">
-                                    <i class="fa fa-file-pdf btn-icon-wrapper btn-icon-lg mb-3"> </i>
-                                </button>
-                            </div>
-                            <div class="col-sm-4">
-                                <button class="btn-icon-vertical btn-square btn-transition br-br btn btn-outline-link">
-                                    <i class="fa fa-comments btn-icon-wrapper btn-icon-lg mb-3"> </i>
-                                </button>
+                    <div class="tab-pane" id="tab1_" th:id="${'tab1_'+resource.getId()}">
+                        <div class="scroll-area-sm">
+                            <div class="scrollbar-container">
+                                <div th:each="com : ${resource.getComments()}">
+                                    <div class="chat-wrapper p-1">
+                                        <div class="chat-box-wrapper">
+                                            <div>
+                                                <div class="avatar-icon-wrapper mr-1">
+                                                    <div class="avatar-icon avatar-icon-sm rounded">
+                                                        <img th:src="@{/img/avatars/{img}(img=${com.getUser().getProfilePic()})}">
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div>
+                                                <div class="chat-box" th:text="${com.getDescription()}"></div>
+                                                <small class="opacity-6">
+                                                    <i class="fa fa-calendar-alt mr-1"></i>
+                                                    <span th:text="${com.getDateOnly()}">11:01 AM</span>
+                                                </small>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                         </div>
-                    </div>
-                </li>
-            </ul>
-        </div>
-    </div>
+                        <div class="card-footer">
+                            <form action="#" th:action="@{/resource/{rid}/addComment(rid=${resource.getId()})}" method="post">
+                                <input name="comment" id="comment" placeholder="Σχολιάστε εδώ και πατήστε enter..."
+                                       type="text" class="form-control-sm form-control">
+                            </form>
+                        </div>
 
-    <div class="col-sm-4 col-lg-3 col-xl-2">
-        <div class="mb-3 profile-responsive card">
-            <div class="dropdown-menu-header">
-                <div class="dropdown-menu-header-inner bg-dark">
-                    <div class="menu-header-image opacity-2" style="background-image: url('assets/images/dropdown-header/abstract2.jpg');"></div>
-                    <div class="menu-header-content btn-pane-right">
-                        <div class="avatar-icon-wrapper mr-3 avatar-icon-xl btn-hover-shine">
-                            <div class="avatar-icon rounded">
-                                <img src="assets/images/avatars/3.jpg" alt="Τύπος υλικού">
-                            </div>
-                        </div>
-                        <div>
-                            <h5 class="menu-header-title">Τίτλος Υλικού</h5>
-                            <h6 class="menu-header-subtitle">Περιγραφή Υλικού</h6>
+<!--                        <ul th:each="com : ${resource.getComments()}" class="list-group list-group-flush">-->
+<!--                            <a href="javascript:void(0);" class="list-group-item" th:text="${com.getDescription()}"></a>-->
+<!--                        </ul>-->
+                    </div>
+                    <div class="tab-pane" id="tab2_" th:id="${'tab2_'+resource.getId()}">
+                        <div class="p-3">
+                            <p class="mb-0" th:text="${resource.getDescription()}">description</p>
                         </div>
                     </div>
                 </div>
             </div>
-            <ul class="list-group list-group-flush">
-                <li class="list-group-item">
-                    <div class="widget-content pt-1 pl-0 pr-0">
-                        <div class="text-center">
-                            <h5 class="widget-heading opacity-4 mb-0">Πληροφορίες Υλικού</h5>
-                            <h6 class="mt-3 mb-3">
-                                <span class="pr-2">
-                                    Κατηγορία Extreme User
-                                </span>
-                            </h6>
-                            <button class="btn-wide btn-pill btn btn-outline-primary">Download</button>
-                        </div>
-                    </div>
-                </li>
-                <li class="p-0 list-group-item">
-                    <div class="grid-menu grid-menu-2col">
-                        <div class="no-gutters row">
-                            <div class="col-sm-4">
-                                <button class="btn-icon-vertical btn-square btn-transition br-bl btn btn-outline-link">
-                                    <i class="fa fa-file-video btn-icon-wrapper btn-icon-lg mb-3"> </i>
-                                </button>
-                            </div>
-                            <div class="col-sm-4">
-                                <button class="btn-icon-vertical btn-square btn-transition br-br btn btn-outline-link">
-                                    <i class="fa fa-comments btn-icon-wrapper btn-icon-lg mb-3"> </i>
-                                </button>
-                            </div>
-                        </div>
-                    </div>
-                </li>
-            </ul>
-        </div>
-    </div>
-
-
-    <div class="col-sm-4 col-lg-3 col-xl-2">
-        <div class="mb-3 profile-responsive card">
-            <div class="dropdown-menu-header">
-                <div class="dropdown-menu-header-inner bg-dark">
-                    <div class="menu-header-image opacity-2" style="background-image: url('assets/images/dropdown-header/abstract2.jpg');"></div>
-                    <div class="menu-header-content btn-pane-right">
-                        <div class="avatar-icon-wrapper mr-3 avatar-icon-xl btn-hover-shine">
-                            <div class="avatar-icon rounded">
-                                <img src="assets/images/avatars/3.jpg" alt="Τύπος υλικού">
-                            </div>
-                        </div>
-                        <div>
-                            <h5 class="menu-header-title">Τίτλος Υλικού</h5>
-                            <h6 class="menu-header-subtitle">Περιγραφή Υλικού</h6>
-                        </div>
-                    </div>
-                </div>
+            <div class="text-center d-block card-footer">
+                <button class="btn-icon btn-icon-only btn btn-link">
+                    <i class="pe-7s-close-circle fsize-3 icon-gradient bg-love-kiss"> </i>
+                </button>
+<!--                <button class="btn-icon btn-icon-only btn btn-link" data-toggle="modal"-->
+<!--                        th:data-target="${'#addResourceCommentModal_'+resource.getId()}">-->
+<!--                    <i class="pe-7s-comment fsize-3 btn-icon-wrapper"> </i>-->
+<!--                </button>-->
+                <a th:href="@{/resource/download/{rid}(rid=${resource.getId()})}">
+                    <button class="btn-icon btn-icon-only btn btn-link">
+                        <i class="pe-7s-download fsize-3 btn-icon-wrapper"> </i>
+                    </button>
+                </a>
             </div>
-            <ul class="list-group list-group-flush">
-                <li class="list-group-item">
-                    <div class="widget-content pt-1 pl-0 pr-0">
-                        <div class="text-center">
-                            <h5 class="widget-heading opacity-4 mb-0">Πληροφορίες Υλικού</h5>
-                            <h6 class="mt-3 mb-3">
-                                <span class="pr-2">
-                                    Κατηγορία Extreme User
-<!--                                    <b class="text-danger">12</b> new leads,-->
-                                </span>
-<!--                                <span><b class="text-success">$56.24</b> in sales</span>-->
-                            </h6>
-                            <button class="btn-wide btn-pill btn btn-outline-primary">Download</button>
-                        </div>
-                    </div>
-                </li>
-                <li class="p-0 list-group-item">
-                    <div class="grid-menu grid-menu-2col">
-                        <div class="no-gutters row">
-                            <div class="col-sm-4">
-                                <button class="btn-icon-vertical btn-square btn-transition br-bl btn btn-outline-link">
-                                    <i class="fa fa-file-image btn-icon-wrapper btn-icon-lg mb-3"> </i>
-                                </button>
-                            </div>
-                            <div class="col-sm-4">
-                                <button class="btn-icon-vertical btn-square btn-transition br-br btn btn-outline-link">
-                                    <i class="fa fa-comments btn-icon-wrapper btn-icon-lg mb-3"> </i>
-                                </button>
-                            </div>
-                        </div>
-                    </div>
-                </li>
-            </ul>
         </div>
     </div>
-
-</div>
-
 </div>
