--- a/src/main/resources/templates/fragments/components/projectResourcesList.html
+++ b/src/main/resources/templates/fragments/components/projectResourcesList.html
@@ -1,94 +1,118 @@
-<div class="col-md-12 col-lg-6 col-xl-3" xmlns:th="http://www.thymeleaf.org" xmlns="http://www.w3.org/1999/html">
-    <div th:each="resource : ${project.getFileResources()}">
-        <div class="card-shadow-primary card-border mb-3 card">
-            <div class="dropdown-menu-header">
-                <div class="dropdown-menu-header-inner bg-midnight-bloom">
-                    <div class="menu-header-content">
-                        <div class="avatar-icon-wrapper btn-hover-shine mb-2 avatar-icon-xl">
-                            <div class="avatar-icon rounded">
-                                <img src="assets/images/avatars/1.jpg" alt="File Type"
-                                     th:src="@{/img/ftypes/{img}(img=${resource.getTypeString()})}">
-                            </div>
-                        </div>
-                        <div>
-                            <h5 class="menu-header-title" th:text="${resource.getTitle()}">Title</h5>
-                        </div>
-                        <div class="menu-header-btn-pane pt-2">
-                            <div role="group" class="btn-group text-center">
-                                <div class="nav">
-                                    <a href="#tab0_" th:href="${'#tab0_'+resource.getId()}" data-toggle="tab"
-                                       class="btn-warning active btn btn-outline-alternate btn-sm">x</a>
-                                    <a href="#tab1_" th:href="${'#tab1_'+resource.getId()}" data-toggle="tab"
-                                       class="btn-warning mr-1 ml-1  btn btn-outline-alternate btn-sm">Σχόλια</a>
-                                    <a href="#tab2_" th:href="${'#tab2_'+resource.getId()}" data-toggle="tab"
-                                       class="btn-warning btn btn-outline-alternate btn-sm">Περιγραφή</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+<!--<div class="row">-->
+<div class="col-md-6" xmlns:th="http://www.thymeleaf.org" xmlns="http://www.w3.org/1999/html">
+    <div class="main-card mb-3 card">
+        <div class="card-header-tab card-header">
+            <div class="card-header-title font-size-lg text-capitalize font-weight-normal">
+                <i class="header-icon pe-7s-diskette icon-gradient bg-amy-crisp"> </i>
+                Συλλογή υλικού
+            </div>
+            <div class="btn-actions-pane-right text-capitalize actions-icon-btn">
+                <div class="btn-group dropdown">
+                    <button type="button" onclick="hideDiv('resourcesDIV')" aria-haspopup="true"
+                            data-toggle="tooltip" data-placement="top" title="Εμφάνιση δυναμικού Wordcloud"
+                            aria-expanded="false" class="btn-icon btn-icon-only btn btn-link">
+                        <i class="pe-7s-map-2 btn-icon-wrapper"></i>
+                    </button>
                 </div>
             </div>
-            <div class="p-0 card-body">
-                <div class="tab-content">
-                    <div class="tab-pane" id="tab0_" th:id="${'tab0_'+resource.getId()}">
-                    </div>
-                    <div class="tab-pane" id="tab1_" th:id="${'tab1_'+resource.getId()}">
-                        <div class="scroll-area-sm">
-                            <div class="scrollbar-container">
-                                <div th:each="com : ${resource.getComments()}">
-                                    <div class="chat-wrapper p-1">
-                                        <div class="chat-box-wrapper">
-                                            <div>
-                                                <div class="avatar-icon-wrapper mr-1">
-                                                    <div class="avatar-icon avatar-icon-sm rounded">
-                                                        <img th:src="@{/img/avatars/{img}(img=${com.getUser().getProfilePic()})}">
-                                                    </div>
-                                                </div>
-                                            </div>
-                                            <div>
-                                                <div class="chat-box" th:text="${com.getDescription()}"></div>
-                                                <small class="opacity-6">
-                                                    <i class="fa fa-calendar-alt mr-1"></i>
-                                                    <span th:text="${com.getDateOnly()}">11:01 AM</span>
-                                                </small>
+        </div>
+
+        <div id="resourcesDIV" class="slider-light">
+        <div class="slick-slider-inverted">
+                <div class="p-5 bg-midnight-bloom" th:each="resource : ${project.getFileResources()}">
+                    <div class="slider-content card-shadow-primary card-border mb-3 card">
+                        <div class="dropdown-menu-header">
+                            <div class="dropdown-menu-header-inner bg-midnight-bloom">
+                                <div class="menu-header-content">
+                                    <div class="avatar-icon-wrapper btn-hover-shine mb-2 avatar-icon-xl">
+                                        <div class="avatar-icon rounded">
+                                            <img src="assets/images/avatars/1.jpg" alt="File Type"
+                                                 th:src="@{/img/ftypes/{img}(img=${resource.getTypeString()})}">
+                                        </div>
+                                    </div>
+                                    <div>
+                                        <h5 class="menu-header-title" th:text="${resource.getTitle()}">Title</h5>
+                                    </div>
+                                    <div class="menu-header-btn-pane pt-2">
+                                        <div role="group" class="btn-group text-center">
+                                            <div class="nav">
+                                                <a href="#tab0_" th:href="${'#tab0_'+resource.getId()}" data-toggle="tab"
+                                                   class="btn-warning active btn btn-outline-alternate btn-sm">x</a>
+                                                <a href="#tab1_" th:href="${'#tab1_'+resource.getId()}" data-toggle="tab"
+                                                   class="btn-warning mr-1 ml-1  btn btn-outline-alternate btn-sm">Σχόλια</a>
+                                                <a href="#tab2_" th:href="${'#tab2_'+resource.getId()}" data-toggle="tab"
+                                                   class="btn-warning btn btn-outline-alternate btn-sm">Περιγραφή</a>
                                             </div>
                                         </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                        <div class="card-footer">
-                            <form action="#" th:action="@{/resource/{rid}/addComment(rid=${resource.getId()})}" method="post">
-                                <input name="comment" id="comment" placeholder="Σχολιάστε εδώ και πατήστε enter..."
-                                       type="text" class="form-control-sm form-control">
-                            </form>
-                        </div>
+                        <div class="p-0 card-body">
+                            <div class="tab-content">
+                                <div class="tab-pane" id="tab0_" th:id="${'tab0_'+resource.getId()}">
+                                </div>
+                                <div class="tab-pane" id="tab1_" th:id="${'tab1_'+resource.getId()}">
+                                    <div class="scroll-area-sm">
+                                        <div class="scrollbar-container">
+                                            <div th:each="com : ${resource.getComments()}">
+                                                <div class="chat-wrapper">
+                                                    <div class="chat-box-wrapper">
+                                                        <div>
+                                                            <div class="avatar-icon-wrapper mr-1">
+                                                                <div class="avatar-icon avatar-icon-sm rounded">
+                                                                    <img th:src="@{/img/avatars/{img}(img=${com.getUser().getProfilePic()})}">
+                                                                </div>
+                                                            </div>
+                                                        </div>
+                                                        <div>
+                                                            <div class="chat-box" th:text="${com.getDescription()}"></div>
+                                                            <small class="opacity-6">
+                                                                <i class="fa fa-calendar-alt mr-1"></i>
+                                                                <span th:text="${com.getDateOnly()}">11:01 AM</span>
+                                                            </small>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="card-footer">
+                                        <form action="#" th:action="@{/resource/{rid}/addComment(rid=${resource.getId()})}" method="post">
+                                            <input name="comment" id="comment" placeholder="Σχόλιο και μετά enter..."
+                                                   type="text" class="form-control-sm form-control">
+                                        </form>
+                                    </div>
 
-<!--                        <ul th:each="com : ${resource.getComments()}" class="list-group list-group-flush">-->
-<!--                            <a href="javascript:void(0);" class="list-group-item" th:text="${com.getDescription()}"></a>-->
-<!--                        </ul>-->
-                    </div>
-                    <div class="tab-pane" id="tab2_" th:id="${'tab2_'+resource.getId()}">
-                        <div class="p-3">
-                            <p class="mb-0" th:text="${resource.getDescription()}">description</p>
+                                    <!--                        <ul th:each="com : ${resource.getComments()}" class="list-group list-group-flush">-->
+                                    <!--                            <a href="javascript:void(0);" class="list-group-item" th:text="${com.getDescription()}"></a>-->
+                                    <!--                        </ul>-->
+                                </div>
+                                <div class="tab-pane" id="tab2_" th:id="${'tab2_'+resource.getId()}">
+                                    <div class="p-3">
+                                        <p class="mb-0" th:text="${resource.getDescription()}">description</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="text-center d-block card-footer">
+                            <button class="btn-icon btn-icon-only btn btn-link">
+                                <i class="pe-7s-close-circle fsize-3 icon-gradient bg-love-kiss"> </i>
+                            </button>
+                            <!--                <button class="btn-icon btn-icon-only btn btn-link" data-toggle="modal"-->
+                            <!--                        th:data-target="${'#addResourceCommentModal_'+resource.getId()}">-->
+                            <!--                    <i class="pe-7s-comment fsize-3 btn-icon-wrapper"> </i>-->
+                            <!--                </button>-->
+                            <a th:href="@{/resource/download/{rid}(rid=${resource.getId()})}">
+                                <button class="btn-icon btn-icon-only btn btn-link">
+                                    <i class="pe-7s-download fsize-3 btn-icon-wrapper"> </i>
+                                </button>
+                            </a>
                         </div>
                     </div>
                 </div>
-            </div>
-            <div class="text-center d-block card-footer">
-                <button class="btn-icon btn-icon-only btn btn-link">
-                    <i class="pe-7s-close-circle fsize-3 icon-gradient bg-love-kiss"> </i>
-                </button>
-<!--                <button class="btn-icon btn-icon-only btn btn-link" data-toggle="modal"-->
-<!--                        th:data-target="${'#addResourceCommentModal_'+resource.getId()}">-->
-<!--                    <i class="pe-7s-comment fsize-3 btn-icon-wrapper"> </i>-->
-<!--                </button>-->
-                <a th:href="@{/resource/download/{rid}(rid=${resource.getId()})}">
-                    <button class="btn-icon btn-icon-only btn btn-link">
-                        <i class="pe-7s-download fsize-3 btn-icon-wrapper"> </i>
-                    </button>
-                </a>
-            </div>
+             </div>
         </div>
     </div>
 </div>
+<!--</div>-->
