Finished the Resource Card in the resource collection phase. Started working on the Wordcloud generation and empathy map

--- a/src/main/resources/templates/project/views/resourcesCollection.html
+++ b/src/main/resources/templates/project/views/resourcesCollection.html
@@ -37,6 +37,8 @@
                 <!-- project timeline component -->
                 <th:block layout:insert="~{fragments/components/projectTimeline}"/>
             </div>
+            <!-- project wordcloud and empathy map component -->
+            <th:block layout:insert="~{fragments/components/mapAndCloud}"/>
         </div>
         <!-- Add member modal -->
 <!--        <th:block layout:insert="~{fragments/modals/addMembers}"/>-->
