--- a/src/main/resources/templates/project/resource/new.html
+++ b/src/main/resources/templates/project/resource/new.html
@@ -38,7 +38,7 @@
                     </div>
                     <div class="form-row">
                         <div class="col-md-3">
-                            <div class="position-relative form-group"><label for="extremeUserCategory">Τύπος Αρχείου</label>
+                            <div class="position-relative form-group"><label for="type">Τύπος Αρχείου</label>
                                 <select class="mb-2 form-control" id="type" name="type"
                                         th:field="*{type}">
                                     <option value="" selected></option>
